--- a/dmu6/dmu6_v_Herschel-Stripe-82/4_flags_herschel-stripe-82.ipynb
+++ b/dmu6/dmu6_v_Herschel-Stripe-82/4_flags_herschel-stripe-82.ipynb
@@ -30,8 +30,11 @@
    },
    "outputs": [],
    "source": [
-    "catname = \"../../dmu1/dmu1_ml_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180113.fitss\"\n",
-    "master_catalogue = Table.read(catname)"
+    "FIELD = 'Herschel-Stripe-82'\n",
+    "SUFFIX = '20180307'\n",
+    "# On Herschel-Stripe-82 we have a list of tiles due to the large size of the field. \n",
+    "# Therefore, we here process each in turn\n",
+    "file_list = glob.glob('../../dmu1/dmu1_ml_Herschel-Stripe-82/data/tiles/sub_catalogue_herschel-stripe-82_{}_*.fits'.format(SUFFIX))"
    ]
   },
   {
@@ -70,15 +73,16 @@
    },
    "outputs": [],
    "source": [
-    "def flag_mag(flagcol, mask):\n",
+    "def flag_mag(master_catalogue, flagcol, mask):\n",
     "    \n",
     "    # Add flag columns if does not exist\n",
     "    if flagcol not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol] = np.zeros(len(master_catalogue), dtype=bool)\n",
+    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol))\n",
     "    \n",
     "    # Flagged\n",
     "    master_catalogue[flagcol][mask] = np.ones(len(mask), dtype=bool)\n",
-    "    print('    Number of flagged objects:', len(master_catalogue[flagcol][mask]))"
+    "    print('    Number of flagged objects:', len(master_catalogue[flagcol][mask]))\n",
+    "    return master_catalogue"
    ]
   },
   {
@@ -96,24 +100,27 @@
    },
    "outputs": [],
    "source": [
-    "## dmu0: Pan-STARRS forced photometry cat \n",
-    "gpc1_err = 0.0010860000038519502\n",
-    "bands = [\"GPC1 g\", \"GPC1 r\", \"GPC1 i\", \"GPC1 z\", \"GPC1 y\"]\n",
+    "def panstars_loopable(master_catalogue):\n",
+    "    ## dmu0: Pan-STARRS stack cat \n",
+    "    gpc1_err = 0.0010860000038519502\n",
+    "    bands = [\"GPC1 g\", \"GPC1 r\", \"GPC1 i\", \"GPC1 z\", \"GPC1 y\"]\n",
     "\n",
-    "for i, band in enumerate(bands):\n",
-    "    print(band)\n",
-    "    basecol = band.replace(\" \", \"_\").lower()\n",
+    "    for i, band in enumerate(bands):\n",
+    "        print(band)\n",
+    "        basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
-    "    ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "        ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
+    "        flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
-    "    mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
-    "    mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
+    "        mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
+    "        mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
     "    \n",
-    "    print('  Aperture magnitude')\n",
-    "    flag_mag(flagcol_ap, mask_ap)\n",
-    "    print('  Total magnitude')\n",
-    "    flag_mag(flagcol_tot, mask_tot)\n",
+    "        print('  Aperture magnitude')\n",
+    "        master_catalogue = flag_mag(master_catalogue, flagcol_ap, mask_ap)\n",
+    "        print('  Total magnitude')\n",
+    "        master_catalogue = flag_mag(master_catalogue, flagcol_tot, mask_tot)\n",
+    "        \n",
+    "    return master_catalogue\n",
     "    "
    ]
   },
@@ -132,20 +139,23 @@
    },
    "outputs": [],
    "source": [
-    "decam_mag = 14.999935\n",
-    "bands = [\"DECam g\", \"DECam r\", \"DECam z\"]\n",
+    "def decals_loopable(master_catalogue):\n",
+    "    decam_mag = 14.999935\n",
+    "    bands = [\"DECam g\", \"DECam r\", \"DECam z\"]\n",
     "\n",
-    "for i, band in enumerate(bands):\n",
-    "    print(band)\n",
-    "    basecol = band.replace(\" \", \"_\").lower()\n",
+    "    for i, band in enumerate(bands):\n",
+    "        print(band)\n",
+    "        basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
-    "    col = \"m_{}\".format(basecol)\n",
-    "    flagcol = \"flag_{}\".format(basecol)\n",
+    "        col = \"m_{}\".format(basecol)\n",
+    "        flagcol = \"flag_{}\".format(basecol)\n",
     "    \n",
-    "    mask  = np.where((master_catalogue[col]  == decam_mag) or (master_catalogue[col] < 7))[0]\n",
+    "        mask  = np.where((master_catalogue[col]  == decam_mag) or (master_catalogue[col] < 7))[0]\n",
     "    \n",
-    "    print('  Total magnitude')\n",
-    "    flag_mag(flagcol, mask)"
+    "        print('  Total magnitude')\n",
+    "        master_catalogue = flag_mag(master_catalogue, flagcol, mask)\n",
+    "        \n",
+    "    return master_catalogue"
    ]
   },
   {
@@ -163,38 +173,40 @@
    },
    "outputs": [],
    "source": [
-    "for band_of_a_kind in all_bands:\n",
-    "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
-    "        #print(band1, band2)\n",
-    "\n",
-    "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
+    "def outliers_loopable(master_catalogue):\n",
+    "    for band_of_a_kind in all_bands:\n",
+    "        for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
+    "            #print(band1, band2)\n",
+    "    \n",
+    "            basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
+    "            \n",
+    "            # Aperture mag\n",
+    "            col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
+    "            ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
+    "            flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
     "        \n",
-    "        # Aperture mag\n",
-    "        col1, col2 = \"m_ap_{}\".format(basecol1), \"m_ap_{}\".format(basecol2)\n",
-    "        ecol1, ecol2 = \"merr_ap_{}\".format(basecol1), \"merr_ap_{}\".format(basecol2)\n",
-    "        flagcol1, flagcol2 = \"flag_ap_{}\".format(basecol1), \"flag_ap_{}\".format(basecol2)\n",
-    "        \n",
-    "        try:\n",
-    "            master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
-    "                      ecol1, ecol2,\n",
-    "                      flagcol1, flagcol2,\n",
-    "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
-    "        except KeyError:\n",
-    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
+    "            try:\n",
+    "                master_catalogue = flag_outliers(master_catalogue, col1, col2,\n",
+    "                          ecol1, ecol2,\n",
+    "                          flagcol1, flagcol2,\n",
+    "                          labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "            except KeyError:\n",
+    "                print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
     "                      \n",
     "        \n",
-    "        # Tot mag\n",
-    "        col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
-    "        ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
-    "        flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
+    "            # Tot mag\n",
+    "            col1, col2 = \"m_{}\".format(basecol1), \"m_{}\".format(basecol2)              \n",
+    "            ecol1, ecol2 = \"merr_{}\".format(basecol1), \"merr_{}\".format(basecol2)              \n",
+    "            flagcol1, flagcol2 = \"flag_{}\".format(basecol1), \"flag_{}\".format(basecol2)\n",
     "              \n",
-    "        try:\n",
-    "            master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
-    "                      ecol1, ecol2,\n",
-    "                      flagcol1, flagcol2,\n",
-    "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
-    "        except KeyError:\n",
-    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))           \n",
+    "            try:\n",
+    "                master_catalogue = flag_outliers(master_catalogue, col1, col2, \n",
+    "                          ecol1, ecol2,\n",
+    "                          flagcol1, flagcol2,\n",
+    "                          labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
+    "            except KeyError:\n",
+    "                print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))  \n",
+    "    return master_catalogue          \n",
     "                      "
    ]
   },
@@ -213,8 +225,19 @@
    },
    "outputs": [],
    "source": [
-    "new_catname = catname[:-5] + \"_withFlags.fits\"\n",
-    "master_catalogue.write(new_catname, overwrite = True)"
+    "for tile in file_list:\n",
+    "    master_catalogue = Table.read(tile)\n",
+    "    master_catalogue = panstars_loopable(master_catalogue)\n",
+    "    master_catalogue = decals_loopable(master_catalogue)\n",
+    "    master_catalogue = outliers_loopable(master_catalogue)\n",
+    "    file_num = tile.split('_')[6].split('.')[0]\n",
+    "    \n",
+    "    flag_cols = [\"help_id\"]\n",
+    "    for col in master_catalogue.colnames:\n",
+    "        if col.startswith(\"flag_\"):\n",
+    "            flag_cols += [col]\n",
+    "    new_catname = \"./data/tiles/{}_{}_{}_flags.fits\".format(FIELD.lower(),SUFFIX, file_num)\n",
+    "    master_catalogue[flag_cols].write(new_catname, overwrite = True)"
    ]
   }
  ],
