MAde Bootes Cigale inputs with Brown cat for testing

--- a/dmu28/dmu28_Bootes/CIGALE_Brown_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Bootes/CIGALE_Brown_catalogue_preparation.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "3367490"
+       "1657470"
       ]
      },
      "execution_count": 3,
@@ -154,16 +154,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:herschelhelp.filters:The filters are missing in the database: mosaic_ks.\n",
-      "The are present in these columns: f_ap_mosaic_ks, f_mosaic_ks, ferr_ap_mosaic_ks, ferr_mosaic_ks, m_ap_mosaic_ks, m_mosaic_ks, merr_ap_mosaic_ks, merr_mosaic_ks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Correction for galactic extinction\n",
     "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
@@ -181,15 +172,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:herschelhelp.external:The band mosaic_ks is not in HELP filter database.\n",
-      "INFO:herschelhelp.external:For 373 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 223 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 220 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 65 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 62 sources, the band 90prime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 61 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 25 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 14 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+      "INFO:herschelhelp.external:For 411 sources, the band lbcb_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 293 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 38 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 6 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
      ]
     }
    ],
@@ -217,14 +203,14 @@
    "source": [
     "u_bands = []\n",
     "g_bands = [            \"90prime_g\"]\n",
-    "r_bands = [\"mosaic_r\", \"90prime_r\"]\n",
+    "r_bands = [\"mosaic_r\"]\n",
     "i_bands = [\"mosaic_i\",             ]\n",
     "z_bands = [\"suprime_z\", \"90prime_z\"]\n",
     "y_bands = []\n",
     "\n",
-    "j_bands = [\"newfirm_j\", \"ukidss_j\"]\n",
+    "j_bands = [\"newfirm_j\"]\n",
     "h_bands = [\"newfirm_h\"]\n",
-    "k_bands = [\"newfirm_k\",           \"tifkam_ks\"]\n",
+    "k_bands = [\"newfirm_k\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -316,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 23677\n"
+      "Number of sources with z-spec: 21274\n"
      ]
     }
    ],
@@ -330,16 +316,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:herschelhelp.filters:The filters are missing in the database: mosaic_ks.\n",
-      "The are present in these columns: f_ap_mosaic_ks, f_mosaic_ks, ferr_ap_mosaic_ks, ferr_mosaic_ks, m_ap_mosaic_ks, m_mosaic_ks, merr_ap_mosaic_ks, merr_mosaic_ks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Correction for galactic extinction\n",
     "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
@@ -356,15 +333,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:herschelhelp.external:The band mosaic_ks is not in HELP filter database.\n",
-      "INFO:herschelhelp.external:For 307 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 184 sources, the band 90prime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 181 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 50 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 47 sources, the band 90prime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 46 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 18 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 10 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+      "INFO:herschelhelp.external:For 408 sources, the band lbcb_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 290 sources, the band mosaic_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 38 sources, the band mosaic_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 6 sources, the band mosaic_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
      ]
     }
    ],
@@ -399,7 +371,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/Bootes_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/Bootes_Brown_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX))"
    ]
   }
  ],
