--- a/dmu32/dmu32_Bootes/Bootes_Brown_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_Brown_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
+      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-02-27 16:09:42.977170\n"
+      "2018-05-10 12:06:52.828807\n"
      ]
     }
    ],
