Making Cigale input for Ldust prediction on HS82

--- a/dmu1/dmu1_ml_Bootes/2.0_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.0_Brown_Reformatting.ipynb
@@ -886,7 +886,7 @@
    "outputs": [],
    "source": [
     "replacements = [\n",
-    "    ['_lbc_', '_lbcb_'],\n",
+    "   # ['_lbc_', '_lbcb_'],\n",
     "    ['_onis_k', '_tifkam_ks'],\n",
     "    ['_irac_ch', '_irac_i'],\n",
     "    ['_prime90_', '_90prime_'],\n",
@@ -985,7 +985,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1058,7 +1060,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1827,7 +1831,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_catalogue[columns].write(\"{}/master_catalogue_bootes_brown{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
