--- a/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
+++ b/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
@@ -141,7 +141,7 @@
     "    col = \"m_{}\".format(basecol)\n",
     "    flagcol = \"flag_{}\".format(basecol)\n",
     "    \n",
-    "    mask  = np.where((master_catalogue[col]  == decam_mag) or (master_catalogue[col] < 7))[0]\n",
+    "    mask  = np.where((master_catalogue[col]  == decam_mag) | (master_catalogue[col] < 7))[0]\n",
     "    \n",
     "    print('  Total magnitude')\n",
     "    flag_mag(flagcol, mask)"
