--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -210,13 +210,13 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "#photoz = Table.read(\"../../dmu24/dmu24_/data/\")\n",
-    "#photoz.meta = None\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307_photoz_20180509.fits\")\n",
+    "photoz.meta = None\n",
     "\n",
-    "#photoz = photoz['help_id', 'z1_median']\n",
-    "#photoz['z1_median'].name = 'redshift'\n",
+    "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['z1_median'].name = 'redshift'\n",
     "\n",
-    "#photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -229,9 +229,9 @@
    "source": [
     "# # Temp spec-z\n",
     "\n",
-    "# ml['zspec'].name = 'redshift'\n",
     "\n",
-    "# ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "\n",
+    "# ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
    ]
   },
   {
@@ -353,6 +353,14 @@
     "        #ADD in XID+ merging here\n",
     "        \n",
     "        merged_table = ml\n",
+    "        \n",
+    "        ##################PHOTO-Z#################\n",
+    "        merged_table = join(merged_table, photoz, join_type='left')\n",
+    "\n",
+    "        # Fill values\n",
+    "        merged_table['redshift'].fill_value = np.nan\n",
+    "        merged_table = merged_table.filled()\n",
+    "        ##################PHOTO-Z#################\n",
     "    \n",
     "        # Sorting the columns\n",
     "        bands = [col[2:] for col in merged_table.colnames\n",
