--- a/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
+++ b/dmu6/dmu6_v_NGP/4_flags_ngp.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from astropy.table import Table\n",
+    "from astropy.table import Table, Column\n",
     "\n",
     "import itertools\n",
     "\n",
@@ -45,9 +45,9 @@
    },
    "outputs": [],
    "source": [
-    "g_bands = [           \"GPC1 g\", \"BASS g\"]\n",
-    "r_bands = [           \"GPC1 r\", \"BASS r\"]\n",
-    "z_bands = [\"DECam z\", \"GPC1 z\", \"BASS z\"]\n",
+    "g_bands = [           \"GPC1 g\", \"90prime g\"]\n",
+    "r_bands = [           \"GPC1 r\", \"90prime r\"]\n",
+    "z_bands = [\"DECam z\", \"GPC1 z\", \"Mosaic z\"]\n",
     "y_bands = [           \"GPC1 y\",          \"UKIDSS Y\"]\n",
     "\n",
     "\n",
@@ -73,7 +73,7 @@
     "    \n",
     "    # Add flag columns if does not exist\n",
     "    if flagcol not in master_catalogue.colnames:\n",
-    "        master_catalogue[flagcol] = np.zeros(len(master_catalogue), dtype=bool)\n",
+    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol))\n",
     "    \n",
     "    # Flagged\n",
     "    master_catalogue[flagcol][mask] = np.ones(len(mask), dtype=bool)\n",
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "decam_mag = 14.999935\n",
-    "bands = [\"DECam g\", \"DECam r\", \"DECam z\"]\n",
+    "bands = [\"DECam z\"]\n",
     "\n",
     "for i, band in enumerate(bands):\n",
     "    print(band)\n",
